# realworld-dioxus-app

./: .gitignore  Cargo.toml  README.md  index.html
src/: main.rs  types.rs
src/components/: footer.rs  form_error_messages.rs  header.rs  home_page.rs  layout.rs  mod.rs
src/features/auth/: auth_layout.rs  mod.rs  sign_in_form.rs  sign_in_page.rs  sign_up_form.rs  sign_up_page.rs
src/features/home/: article_preview.rs  home_page.rs  mod.rs  tags.rs
src/services/: api.rs  auth_service.rs  mod.rs
src/settings/: mod.rs  path.rs
src/utils/: local_storage.rs
