[package]
name = "realworld-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.3", features = ["web", "router", "fermi"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"

log = "0.4.14"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Storage"
]
